--- a/index.html
+++ b/index.html
@@ -4,21 +4,43 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AppStack - React Admin &amp; Dashboard Template</title>
+  <title>Online Exam</title>
+  <link rel="shortcut icon" href="/assets/favicon.ico">
 
-  <link rel="shortcut icon" href="/onlineexam/assets/favicon.ico">
+<style>
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(/assets/poppins-300.woff2) format('woff2');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(/assets/poppins-400.woff2) format('woff2');
+}
 
-  <link rel="preconnect" href="//fonts.gstatic.com/" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url(/assets/poppins-500.woff2) format('woff2');
+}
+</style>
 
+<link rel="preload" href="/assets/poppins-400.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+<link rel="preload" href="/assets/poppins-500.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
-  <script type="module" crossorigin src="/onlineexam/assets/main-032006a1.js"></script>
-  <link rel="modulepreload" crossorigin href="/onlineexam/assets/apexcharts-042e6b4d.js">
-  <link rel="modulepreload" crossorigin href="/onlineexam/assets/chartjs-20842a94.js">
-  <link rel="modulepreload" crossorigin href="/onlineexam/assets/googlemaps-815f2fd8.js">
-  <link rel="modulepreload" crossorigin href="/onlineexam/assets/vectormaps-f0da19f8.js">
-  <link rel="stylesheet" href="/onlineexam/assets/index.css">
-  <link rel="stylesheet" href="/onlineexam/assets/light.css">
+  <script type="module" crossorigin src="/assets/main-7ca5540e.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/apexcharts-042e6b4d.js">
+  <link rel="modulepreload" crossorigin href="/assets/chartjs-8cd8481c.js">
+  <link rel="modulepreload" crossorigin href="/assets/fullcalendar-c40e6606.js">
+  <link rel="stylesheet" href="/assets/index.css">
+  <link rel="stylesheet" href="/assets/light.css">
 </head>
 
 <body>
