--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Online Exam</title>
-  <link rel="shortcut icon" href="/assets/favicon.ico">
+  <link rel="shortcut icon" href="/onlineexam/assets/favicon.ico">
 
 <style>
 @font-face {
@@ -13,14 +13,14 @@
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url(/assets/poppins-300.woff2) format('woff2');
+  src: url(/onlineexam/assets/poppins-300.woff2) format('woff2');
 }
 @font-face {
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(/assets/poppins-400.woff2) format('woff2');
+  src: url(/onlineexam/assets/poppins-400.woff2) format('woff2');
 }
 
 @font-face {
@@ -28,19 +28,19 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url(/assets/poppins-500.woff2) format('woff2');
+  src: url(/onlineexam/assets/poppins-500.woff2) format('woff2');
 }
 </style>
 
-<link rel="preload" href="/assets/poppins-400.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-<link rel="preload" href="/assets/poppins-500.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+<link rel="preload" href="/onlineexam/assets/poppins-400.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+<link rel="preload" href="/onlineexam/assets/poppins-500.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
-  <script type="module" crossorigin src="/assets/main-f703ae7d.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/apexcharts-042e6b4d.js">
-  <link rel="modulepreload" crossorigin href="/assets/chartjs-8cd8481c.js">
-  <link rel="modulepreload" crossorigin href="/assets/fullcalendar-c40e6606.js">
-  <link rel="stylesheet" href="/assets/index.css">
-  <link rel="stylesheet" href="/assets/light.css">
+  <script type="module" crossorigin src="/onlineexam/assets/main-098cb545.js"></script>
+  <link rel="modulepreload" crossorigin href="/onlineexam/assets/apexcharts-042e6b4d.js">
+  <link rel="modulepreload" crossorigin href="/onlineexam/assets/chartjs-8cd8481c.js">
+  <link rel="modulepreload" crossorigin href="/onlineexam/assets/fullcalendar-c40e6606.js">
+  <link rel="stylesheet" href="/onlineexam/assets/index.css">
+  <link rel="stylesheet" href="/onlineexam/assets/light.css">
 </head>
 
 <body>
